--- a/miniprogram/pages/watchOrder/index.wxml
+++ b/miniprogram/pages/watchOrder/index.wxml
@@ -13,66 +13,58 @@
     <!-- 有数据 -->
     <view wx:if="{{ orderList.length >= 1 }}">
         <view class="margin text-red">上菜请点击【上菜】，客人离桌点【结束用餐】</view>
-        <!-- 订单列表 -->
-        <view class="VerticalBox">
-            <scroll-view class="VerticalNav nav" scroll-y scroll-with-animation scroll-top="{{VerticalNavTop}}" style="height:calc(100vh - 375rpx);">
-                <view class="cu-item {{index==TabCur?'text-blue cur':''}}" wx:for="{{tableList}}" wx:key="index" bindtap='tabSelect' data-index="{{item.value}}">
-                    {{item.name}}
-                </view>
-            </scroll-view>
-            <scroll-view class="VerticalMain" scroll-y scroll-with-animation style="height: {{containerHeight - 180}}rpx;" scroll-into-view="main-{{MainCur}}" bindscroll="VerticalMain" refresher-enabled="true" bindrefresherrefresh="getOrderList" refresher-triggered="{{isRefreshing}}">
-                <view class=" padding-top padding-lr-sm" wx:for="{{tableList}}" wx:key="index" id="main-{{item.value}}">
-                    <view class='cu-bar solid-bottom bg-white'>
-                        <text class='cuIcon-title text-blue'>{{item.name}}</text>
-                    </view>
-                    <view class="bg-white" style="min-height: 90rpx;position: relative;">
-                        <!-- 订单 -->
-                        <view style="padding: 9rpx;border-bottom: 1rpx solid lightgray;" wx:if="{{m1.isShow(item,orderDetail)}}" wx:for="{{orderList}}" wx:for-item="orderDetail" wx:key="_id" wx:for-index="index" class="cu-item cur">
-                            <view wx:if="{{orderDetail.state==0}}" class="cu-tag bg-purple">待支付</view>
-                            <view wx:if="{{orderDetail.state==2}}" class="cu-tag bg-purple">正在用餐</view>
-                            <view wx:if="{{orderDetail.state==1}}" class="cu-tag bg-orange">已付款</view>
+        <pageList style="height: {{containerHeight-150}}rpx;" getListData="{{getListData}}">
+            <view slot="listContent" class="cu-list">
+                <!-- 订单 -->
+                <view class="cu-item padding" wx:for="{{orderList}}" wx:for-item="orderDetail" wx:key="_id" wx:for-index="index">
+                    <view wx:if="{{orderDetail.state==0}}" class="cu-tag bg-purple">待支付</view>
+                    <view wx:if="{{orderDetail.state==2}}" class="cu-tag bg-purple">正在用餐</view>
+                    <view wx:if="{{orderDetail.state==1}}" class="cu-tag bg-orange">已付款</view>
 
-                            <view wx:if="{{orderDetail.dinersNumb}}" class="cu-tag">{{orderDetail.dinersNumb}}人用餐</view>
-                            <view wx:if="{{orderDetail.state==1}}" bind:tap="setOrderServing" data-data="{{orderDetail}}" class="cu-tag round bg-blue margin-left-lg">上菜</view>
-                            <view wx:if="{{orderDetail.state==2}}" bind:tap="setOrderFinish" data-data="{{orderDetail}}" class="cu-tag round bg-blue margin-left-lg">结束用餐</view>
 
-                            <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
-                                <view class="cu-list menu-avatar">
-                                    <view class="cu-item">
-                                        <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
-                                        <view class="content">
-                                            <block wx:if="{{goodsDetail._id!='8d1a732f6668632f02bffddc546aef20'}}">
-                                                <view class="text-gray text-sm flex justify-between">
-                                                    <view class="text-grey">{{ goodsDetail.title }}</view>
-                                                    <view class="text-gray text-sm">
-                                                        x{{ goodsDetail.number}}
-                                                    </view>
-                                                </view>
-                                            </block>
-                                            <block wx:else>
-                                                <view class="text-gray text-sm flex justify-between">
-                                                    <view class="text-grey">{{ goodsDetail.title }}</view>
-                                                    <!-- <view style="color: gray;">
-                                                        会员存酒
-                                                    </view> -->
-                                                    <view class="text-gray text-sm">
-                                                        x{{ goodsDetail.number}}
-                                                    </view>
-                                                </view>
-                                            </block>
+                    <view wx:if="{{orderDetail.tableSeats.length>0}}" class="cu-tag lines-green">{{orderDetail.tableSeats[0].name}}</view>
+                    <view wx:else class="cu-tag  lines-red">未选桌</view>
+                    <view wx:if="{{orderDetail.dinersNumb}}" class="cu-tag">{{orderDetail.dinersNumb}}人用餐</view>
+
+                    <view wx:if="{{orderDetail.state==1}}" bind:tap="setOrderServing" data-data="{{orderDetail}}" class="cu-tag round bg-blue margin-left-lg">上菜</view>
+                    <view wx:if="{{orderDetail.state==2}}" bind:tap="setOrderFinish" data-data="{{orderDetail}}" class="cu-tag round bg-blue margin-left-lg">结束用餐</view>
+
+                    <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
+                        <view class="cu-list menu-avatar">
+                            <view class="cu-item">
+                                <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
+                                <view class="content">
+                                    <block wx:if="{{goodsDetail._id!='8d1a732f6668632f02bffddc546aef20'}}">
+                                        <view class="text-gray text-sm flex justify-between">
+                                            <view class="text-grey">{{ goodsDetail.title }}</view>
+                                            <view class="text-gray text-sm">
+                                                x{{ goodsDetail.number}}
+                                            </view>
                                         </view>
-                                    </view>
+                                    </block>
+                                    <block wx:else>
+                                        <view class="text-gray text-sm flex justify-between">
+                                            <view class="text-grey">{{ goodsDetail.title }}</view>
+
+                                            <view class="text-gray text-sm">
+                                                x{{ goodsDetail.number}}
+                                            </view>
+                                        </view>
+                                    </block>
                                 </view>
-                            </block>
-                            <view>
-                                支付时间：{{filter.format(orderDetail.updateDate, 'YY-MM-DD hh:mm:ss')}}
                             </view>
                         </view>
+                    </block>
+                    <view wx:if="{{orderDetail.state==2}}">
+                        开始用餐时间：{{filter.format(orderDetail.updateDate, 'pastTime')}}
+                    </view>
+                    <view wx:if="{{orderDetail.state==1}}">
+                        支付时间：{{filter.format(orderDetail.updateDate, 'pastTime')}}
                     </view>
                 </view>
-                <view style="height: 90rpx;"></view>
-            </scroll-view>
-        </view>
+            </view>
+        </pageList>
+
         <view class="cu-modal bottom-modal {{showDialogTable?'show':''}}">
             <view class="cu-dialog">
                 <view class="padding bg-white">
