--- a/miniprogram/pages/super-manage/index.wxml
+++ b/miniprogram/pages/super-manage/index.wxml
@@ -26,16 +26,22 @@
                 超级管理员
             </view>
             <view class="flex justify-around">
-                <view style="text-align: center;" bind:tap="goToOperation">
-                    <view class="padding">年度总收入</view>
+                <view bind:tap="goToOperation" style="text-align: center;">
+                    <view class="padding">总收入</view>
                     <view style="font-size: 35rpx;font-weight: bold;">
                         <span class="text-price">{{filter.formatMoney(totalIncom)}}</span>
                     </view>
                 </view>
-                <view style="text-align: center;" bind:tap="goTopManageShop">
-                    <view class="padding">店铺数</view>
+                <view bind:tap="gotoBillPage" style="text-align: center;">
+                    <view class="padding">总消费</view>
                     <view style="font-size: 35rpx;font-weight: bold;">
-                        {{shopNumber}}
+                        <span class="text-price">{{filter.formatMoney(totalUser)}}</span>
+                    </view>
+                </view>
+                <view bind:tap="gotoBillPage" style="text-align: center;">
+                    <view class="padding">总支出</view>
+                    <view style="font-size: 35rpx;font-weight: bold;">
+                        <span class="text-price">{{filter.formatMoney(shopExpend)}}</span>
                     </view>
                 </view>
             </view>
