--- a/miniprogram/pages/shop-manage/spend-management/index.wxml
+++ b/miniprogram/pages/shop-manage/spend-management/index.wxml
@@ -3,15 +3,16 @@
     <view slot="backText">返回</view>
     <view slot="content">支出管理</view>
 </cu-custom>
-<view style="text-align: center;">{{shop.name}}</view>
+<view style="text-align: center;" class="padding">{{shop.name}}</view>
 <view class='cu-load load-modal' wx:if="{{isLoading}}">
     <view class='gray-text text-xs'>加载中...</view>
 </view>
 <!-- 数据加载完毕 -->
 <block wx:if="{{ !isLoading }}">
     <!-- 有数据 -->
-    <view wx:if="{{ spend.length >= 1 }}">
-        <scroll-view scroll-y="true" style="height: {{containerHeight-110}}rpx;" refresher-enabled="true" bindrefresherrefresh="getSpend" refresher-triggered="{{isRefreshing}}" bindscrolltolower="loadMore">
+
+    <scroll-view scroll-y="true" style="height: {{containerHeight-110}}rpx;" refresher-enabled="true" bindrefresherrefresh="getSpend" refresher-triggered="{{isRefreshing}}" bindscrolltolower="loadMore">
+        <view wx:if="{{ spend.length >= 1 }}">
             <block wx:for="{{ spend }}" wx:for-item="spendDetail" wx:key="_id" wx:for-index="index">
                 <view class="cu-card">
                     <view class="cu-item shadow">
@@ -26,6 +27,9 @@
                                             </view>
                                             <view class="text-gray text-sm">
                                                 数量：X{{ goodsDetail.number}}
+                                            </view>
+                                            <view wx:if="{{goodsDetail.userName}}" class="text-gray text-sm">
+                                                填写人：{{ goodsDetail.userName}}
                                             </view>
                                         </view>
                                     </view>
@@ -48,14 +52,14 @@
                     </view>
                 </view>
             </block>
-        </scroll-view>
-    </view>
-    <!-- 无数据 -->
-    <block wx:else>
-        <view style="text-align: center;margin-top: 20vh;">
-            <image style="width: 50vw;" src="../../../images/icons/no-data.svg" mode="widthFix" />
-            <view style="top: -240rpx;">暂无数据</view>
         </view>
-    </block>
+        <!-- 无数据 -->
+        <block wx:else>
+            <view style="text-align: center;margin-top: 20vh;">
+                <image style="width: 50vw;" src="../../../images/icons/no-data.svg" mode="widthFix" />
+                <view style="top: -240rpx;">暂无数据</view>
+            </view>
+        </block>
+    </scroll-view>
     <button bind:tap="handleAdd" class="cu-bin round bg-blue lg" style="width: 90vw;position: fixed;bottom: 30rpx;margin-left: 5vw;">新增</button>
 </block>
